fix: Fix multiline truncation mixin working for all existences (#925)
* fix: Fix multiline truncation mixin working for all existences

* Apply requested changes

--- a/src/app/iteration/iteration.component.scss
+++ b/src/app/iteration/iteration.component.scss
@@ -61,6 +61,9 @@
     &.active {
       border-left: 3px solid $navbar-pf-border-color;
     }
+    .iteration-description{
+       @include multiline-truncate($line-height: 1.5em, $line-count: 2, $bg-color: $color-pf-white) ;
+    }
   }
 }
 .not-current-iteration{
